--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocuGit</title>
+    <title>Eventus</title>
      <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
     <header>
-        <h1>DocuGit</h1>
-        <p>Documentation management made simple</p>
+        <h1>Eventus</h1>
+        <p>Miminalist Event Planner</p>
     </header>
         <div>
             <h2>Welcome</h2>
             <p>Get started by exploring your documentation projects.</p>
             <div>{{message}}</div>
+            <form action="/emailSent" method="POST" enctype="multipart/form-data">
+                <input name="email" id="email" type="email" />
+                <button type="submit">Submit</button>
+            </form>
+            
         </div>
 </body>
 </html>
